Rename class to 'MetaModel'.
Signed-off-by: Franz Wilhelmstötter <franz.wilhelmstoetter@gmail.com>